--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,9 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "fastapi>=0.116.1",
     "openai>=1.99.2",
     "requests>=2.32.4",
     "tqdm>=4.67.1",
+    "uvicorn>=0.35.0",
 ]
