--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "fastapi>=0.116.1",
     "openai>=1.99.2",
+    "python-dotenv>=1.1.1",
     "requests>=2.32.4",
     "tqdm>=4.67.1",
     "uvicorn>=0.35.0",
